scrollbar opacity fix

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -148,7 +148,7 @@ a {
 
     &:before {
       background-color: color(accent);
-      opacity: 100%;
+      opacity: 1;
       width: 5px;
     }
   }
